--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ task1.py
 feriechallenge/Damian_Giza_image.jpg
 feriechallenge/katarzyna_ku_image.jpg
 feriechallenge/emails.xlsx
+feriechallenge/0.py
+feriechallenge/bib.db
